[tool.poetry]
name = "whatsapp"
version = "0.1.0"
description = ""
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.10.5"
email-validator = "^2.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
